--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    
     <div class="container">
+        <button id="size-changer">Change grid size</button>
         <div class="grid"></div>
     </div>
     
